# opengl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_flags.txt  imgui.ini
data/shaders/: basic_frag.glsl  basic_vert.glsl
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_image/: stb_image.h
src/: global.h  main.cpp  util.h
src/engine/: buffer.cpp  buffer.h  camera.cpp  camera.h  keyboard.h  render.cpp  render.h  shaders.cpp  shaders.h  texture.cpp  texture.h  window.cpp  window.h
src/osd/: osd.cpp  osd.h  scene.cpp  scene.h
src/render/: buffer.cpp  buffer.h  render.cpp  render.h  shaders.cpp  shaders.h  texture.cpp  texture.h  window.cpp  window.h
